--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@ server:
 app:
   kafka:
     topics:
-      message: message-topic
+      task1: task1-topic
     groups:
-      message: message-consumer-group
+      task1: task1-group
 spring:
   application:
     name: shortcut-kafka-consumer
@@ -56,10 +56,15 @@ spring:
       key-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
       properties:
+        # Запрещаем удалять заголовки типов после десериализации
+        spring.json.remove.type.headers: false
+        spring.json.type.mapping: "com.gmail.alexei28.shortcutkafkaproducer.dto.Task1Dto:com.gmail.alexei28.shortcutkafkaconsumer.dto.Task1Dto"
         # 2. Указываем делегатов, которые будут выполнять реальную работу
         spring.deserializer.key.delegate.class: org.apache.kafka.common.serialization.StringDeserializer
         spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
         spring.json.trusted.packages: "*" # Доверяем всем пакетам для десериализации
+    listener:
+      ack-mode: MANUAL_IMMEDIATE
 logging.level:
   org.springframework.kafka: info
   org.hibernate.SQL: debug
