--- a/restclient.rc
+++ b/restclient.rc
@@ -5,6 +5,6 @@
 
 :BASE_URL = http://localhost:8081/api/v1
 
-## Hello page
-GET :BASE_URL/hello
+# Spring Boot actuator
+GET :BASE_URL/actuator/health
 
